# aoc2024

./: CHANGELOG.md  LICENSE  aoc2024.cabal  flake.nix  res.txt
inputs/: 17-actual.txt  2-small.txt
src/: 03.hs  04.hs  07.hs  08.hs  09.hs  1.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  2.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  4.hs  5.hs  6.hs  7.hs  8.hs
