cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0

author:             fbwdw
maintainer:         archimj@proton.me

category:           Advent Of Code
build-type:         Simple

common shared-settings
    ghc-options: -Wall
    hs-source-dirs:   src
    default-language: GHC2021
    build-depends:    base ^>=4.18.2.1,

executable day01
    import:           shared-settings
    main-is:          01.hs
    build-depends:    containers

executable day02
    import:           shared-settings
    main-is:          02.hs

executable day03
    import:           shared-settings
    main-is:          03.hs

executable day04
    import:           shared-settings
    main-is:          04.hs
    build-depends:    universe-base, array

executable day05
    import:           shared-settings
    main-is:          05.hs
    build-depends:    containers

executable day06
    import:           shared-settings
    main-is:          06.hs
    build-depends:    containers, array,

executable day07
    import:           shared-settings
    main-is:          07.hs

executable day08
    import:           shared-settings
    main-is:          08.hs
    build-depends:    containers,

executable day09
    import:           shared-settings
    main-is:          09.hs
    build-depends:    containers,

executable day10
    import:           shared-settings
    main-is:          10.hs
    build-depends:    vector, containers

executable day11
    import:           shared-settings
    main-is:          11.hs
    build-depends:    containers

executable day12
    import:           shared-settings
    main-is:          12.hs
    build-depends:    containers

executable day13
    import:           shared-settings
    main-is:          13.hs

executable day14
    import:           shared-settings
    main-is:          14.hs
    build-depends:    containers

executable day15
    import:           shared-settings
    main-is:          15.hs
    build-depends:    containers, array
